# code_highlighter

./: .gitignore  AGENTS.md  Highlightengine.sln  README
rust_highlighter/: .gitignore  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_SCORE.md  Cargo.toml  DESIGN_ASSESSMENT.md  DESIGN_DECISIONS.md  EXAMPLES_SUMMARY.md  FINAL_PERFORMANCE_REPORT.md  GIT_PUSH_SUMMARY.md  LANGUAGE_PLAN.md  MIGRATION_SUMMARY.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_SPACE.md  PERFORMANCE_ANALYSIS.md  README.md  RENDERING_VERIFICATION.md  THEMES.md  THEME_DESIGN.md  THEME_SYSTEM_SUMMARY.md  USAGE.md  generate_languages.py  generate_languages_v2.py  multiline_test.scala  test.html
rust_highlighter/.bsp/: sbt.json  scala-cli.json
rust_highlighter/.metals/: metals.lock.db  metals.mv.db
rust_highlighter/.scala-build/: ide-inputs.json
rust_highlighter/examples/: README.md  algorithms.html  algorithms.py  data_structures.html  data_structures.kt  fibonacci.html  fibonacci.scala  index.html  sorting.html  sorting.java  system_programming.html  system_programming.rs  test.cs  test.rs
rust_highlighter/languages/: csharp.toml  csharp_old.toml  dart.toml  erlang.toml  go.toml  haskell.toml  java.toml  javascript.toml  kotlin.toml  lua.toml  matlab.toml  objectivec.toml  perl.toml  php.toml  python.toml  r.toml  ruby.toml  rust.toml  scala.toml  swift.toml  typescript.toml
rust_highlighter/src/: error.rs  interner.rs  lib.rs  parser.rs  profile.rs  renderer.rs  theme.rs
rust_highlighter/themes/: dark.toml  light.toml  monokai.toml  solarized-dark.toml  solarized-light.toml
(+42 files in other folders)
